--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,9 @@ body{
   background-image: url('Backgr.jpg');
   margin:0;
 }
+h1{
+  margin:0;
+}
 .header{
   background-color: #D1E8E4;
   margin: 0;
