--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 body{
   background-image: url('Backgr.jpg');
-  margin:0;
+  margin-top:0;
+  margin-left:0;
+  margin-right:0;
+  margin-bottom:0;
 }
 h1{
   margin:0;
