--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ hr{
   font-style:oblique;
   text-align: center;
   padding-left: 300px;
+  margin-top:0;
 }
 .main_box{
   display: inline-block;
