--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ hr{
   font-size: 3.2rem;
   font-style:oblique;
   text-align: center;
-  padding-left: 300px;
+  padding-left: 30%;
   margin-top:15;
 }
 .main_box{
