--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-  background-image:url(../image/Background.png);
+  background-image:url(Background.png);
   background-color: #6C4A4A;
   height: 100%;
   width:100%;
